--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="./style.css">
         <script type="text/javascript" src="jquery-3.6.3.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.7, maximum-scale=5">
     </head>
     <body>
         <!--
